--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
     "@eslint-react/eslint-plugin": "^1.45.3",
+    "@tanstack/eslint-plugin-router": "^1.115.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
