--- a/package.json
+++ b/package.json
@@ -12,38 +12,40 @@
   "dependencies": {
     "@antfu/eslint-config": "^4.12.0",
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/react-query": "^5.66.5",
-    "@tanstack/react-query-devtools": "^5.66.5",
-    "@tanstack/react-router": "^1.114.3",
-    "@tanstack/react-router-devtools": "^1.114.3",
-    "@tanstack/react-router-with-query": "^1.114.3",
-    "@tanstack/react-start": "^1.114.3",
-    "@tanstack/router-plugin": "^1.114.3",
+    "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.3",
+    "@tanstack/react-query-devtools": "^5.74.3",
+    "@tanstack/react-router": "^1.116.0",
+    "@tanstack/react-router-devtools": "^1.116.0",
+    "@tanstack/react-router-with-query": "^1.116.0",
+    "@tanstack/react-start": "^1.116.1",
+    "@tanstack/router-plugin": "^1.116.1",
+    "@zod/mini": "4.0.0-beta.20250415T232143",
     "clsx": "^2.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "install": "^0.13.0",
-    "motion": "^12.6.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "motion": "^12.7.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.0.6",
-    "vinxi": "^0.5.3",
+    "tailwindcss": "^4.1.4",
+    "up-fetch": "^2.1.0",
+    "vinxi": "^0.5.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
-    "@eslint-react/eslint-plugin": "^1.45.3",
+    "@eslint-react/eslint-plugin": "^1.48.1",
     "@tanstack/eslint-plugin-router": "^1.115.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.0",
     "eslint": "^9.24.0",
-    "jsdom": "^26.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^6.1.0",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.0",
     "web-vitals": "^4.2.4"
   }
 }
