--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@antfu/eslint-config": "^4.12.0",
     "@heroicons/react": "^2.2.0",
+    "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.74.3",
