--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@tanstack/react-router-with-query": "^1.116.0",
     "@tanstack/react-start": "^1.116.1",
     "@tanstack/router-plugin": "^1.116.1",
-    "@zod/mini": "4.0.0-beta.20250415T232143",
     "clsx": "^2.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -33,6 +32,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "up-fetch": "^2.1.0",
+    "valibot": "^1.0.0",
     "vinxi": "^0.5.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
