--- a/package.json
+++ b/package.json
@@ -1,52 +1,49 @@
 {
-  "name": "stream-vibe",
-  "type": "module",
+  "name": "streamvibe",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start",
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
     "lint": "pnpx eslint",
     "lint:fix": "pnpx eslint --fix"
   },
   "dependencies": {
-    "@antfu/eslint-config": "^4.12.0",
     "@heroicons/react": "^2.2.0",
-    "@t3-oss/env-core": "^0.12.0",
-    "@tailwindcss/vite": "^4.1.4",
-    "@tanstack/react-query": "^5.74.3",
-    "@tanstack/react-query-devtools": "^5.74.3",
-    "@tanstack/react-router": "^1.116.0",
-    "@tanstack/react-router-devtools": "^1.116.0",
-    "@tanstack/react-router-with-query": "^1.116.0",
-    "@tanstack/react-start": "^1.116.1",
-    "@tanstack/router-plugin": "^1.116.1",
+    "@t3-oss/env-nextjs": "^0.13.0",
     "clsx": "^2.1.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "install": "^0.13.0",
-    "motion": "^12.7.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "motion": "^12.9.2",
+    "next": "15.4.0-canary.17",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4",
     "up-fetch": "^2.1.0",
-    "valibot": "^1.0.0",
-    "vinxi": "^0.5.4",
-    "vite-tsconfig-paths": "^5.1.4"
+    "usehooks-ts": "^3.1.1",
+    "valibot": "^1.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
-    "@eslint-react/eslint-plugin": "^1.48.1",
-    "@tanstack/eslint-plugin-router": "^1.115.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.0",
-    "eslint": "^9.24.0",
-    "jsdom": "^26.1.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.0",
-    "web-vitals": "^4.2.4"
+    "@eslint-react/eslint-plugin": "^1.48.5",
+    "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "15.4.0-canary.17",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "15.4.0-canary.17",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.2",
+      "@types/react-dom": "19.1.3"
+    }
   }
 }
