--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "pnpx eslint",
-    "lint:fix": "pnpx eslint --fix"
+    "lint:fix": "pnpx eslint --fix",
+    "prettier": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@t3-oss/env-nextjs": "^0.13.0",
     "clsx": "^2.1.1",
-    "install": "^0.13.0",
     "motion": "^12.9.2",
     "next": "15.4.0-canary.17",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "up-fetch": "^2.1.0",
     "usehooks-ts": "^3.1.1",
@@ -32,11 +34,17 @@
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.3",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.4.0-canary.17",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "husky": "^9.1.7",
+    "install": "^0.13.0",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
@@ -45,5 +53,14 @@
       "@types/react": "19.1.2",
       "@types/react-dom": "19.1.3"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{css,scss,json,md}": [
+      "prettier --write"
+    ]
   }
 }
