--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.3.2",
+    "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.13.0",
     "clsx": "^2.1.1",
     "motion": "^12.9.2",
