--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.4.0-canary.17",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-player": "^2.16.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "up-fetch": "^2.1.0",
