--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@next/bundle-analyzer": "^15.3.2",
+    "@plaiceholder/next": "^3.0.0",
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.13.0",
     "clsx": "^2.1.1",
     "motion": "^12.9.2",
     "next": "15.4.0-canary.17",
+    "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-player": "^2.16.0",
+    "sharp": "^0.34.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
     "up-fetch": "^2.1.0",
